# good

./: .env.example  .gitignore  .replit  Dockerfile.backend  IMPORTANT-ACCESS.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run_backend.py  setup-instructions.md  start.sh  start_admin_system.py  start_fastapi_services.py  tailwind.config.js  tree_output.txt
admin/: README.md  database_seed.sql  start_admin.sh
admin/backend/: database_manager.py  database_seed_loader.py  main.py
attached_assets/: Pasted-High-Value-Opportunity-Alert-Viewed-AI-detected-6-opportunities-over-100K-immediate-review-recom-1751171396341_1751171396341.txt  Pasted-This-document-integrates-every-concept-we-ve-discussed-the-universal-audience-the-advanced-AI-mult-1751052895699_1751052895699.txt  Pasted-u-mean-i-paste-this-For-Granada-given-your-app-has-distinct-user-groups-NGOs-students-businesses-1750820547953_1750820547953.txt
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/api/: main.py
backend/core/: auth.py  config.py  database.py
client/: index.html
client/src/: App.tsx  (+26 more)
server/: academic_engine.py  admin_api.py  admin_routes.ts  bot_manager.py  career_engine.py  document_processor.py  genesis_engine.py  index.ts  intelligent_bot_controller.ts  main.py  mobile_admin_dashboard.html  paymentRoutes.ts  personalization_engine.py  proposal_ai.py  routes.ts  storage.ts  wabden_api.py
shared/: schema.ts
src/: App.tsx  LandingPage.tsx
wabden/: main.py  requirements.txt  start_wabden.py
(+119 files in other folders)
